# AImodelPipeline

./: 00_pretreatment.ipynb  01_eda.ipynb  02_specific_feature.ipynb  07_draftmodel3.py  MLFLOW_USAGE.md  README.md  customer_count_pred_rounded.csv  data_loader.py  final_model.pkl  hyperparameter_tuner.py  mlflow.db  model.joblib  model_evaluator.py  model_persistence.py  model_results.json  pr_description.md  preprocessor.py  pyproject.toml  run_training.sh  session_manager.py  start_mlflow_ui.sh  test_model.joblib  test_model_results.json  test_modules.py  tuning_summary.json  utils.py  visualizer.py
artifacts/: feature_manager.pkl  metadata.json  model.pkl  target_manager.pkl
mlruns/0/: meta.yaml
notebooks/: 01_eda.ipynb
src/: hyper_utils.py
src/03_pretreatment/: arithmetic.py  main.py  rows.py  visualization.py
src/data/: __init__.py
src/features/: __init__.py
src/forecasting_poc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ml/: __init__.py  hyper_tuner.py  managers.py  nested_cv.py  pipeline.py
src/models/: __init__.py  base.py  lightgbm_model.py  pipeline.py
src/module/: db_utils.py  feature_transformer.py  features.py  results.py  targets.py  test_staged_tuning.py
src/non_timeseries_pipeline/: __init__.py  feature_manager.py  hyper_tuning.py  mlflow_manager.py  nested_cv.py  pipeline.py  target_manager.py
src/pipelines/: __init__.py  base.py  tree_pipeline.py
src/scripts/: 02_csv_to_sqlite.py  03_pretreatment.py  04_sqlite_to_csv.py  05_merge_table.py  06_feature_transform.py  07_concise_draftmodel.py  12_model_test.py  (+6 more)
(+49 files in other folders)
