[project]
name = "forecasting-poc"
version = "0.1.0"
description = "PoC Project of restaurant forecasting"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connectorx>=0.4.3",
    "jpholiday>=1.0.2",
    "jupyterlab>=4.4.2",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "pyarrow>=20.0.0",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
]

[dependency-groups]
dev = [
    "japanize-matplotlib>=1.1.3",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "python-dotenv>=1.1.0",
    "ruff>=0.3.0",
]


[tool.ruff]
# 基本設定
line-length = 120
target-version = "py313"
exclude = ["*.ipynb", ".git", ".venv", "venv", "__pypackages__", "_build", "build", "dist"]

[tool.ruff.lint]
# 有効にするルール
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "C",   # flake8-comprehensions
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "N",   # pep8-naming
    "RUF", # ruff-specific rules
]

# 無視するルール
ignore = [
    "E501",  # line too long
    "E203",  # whitespace before ':'
    "E402",  # module level import not at top of file
    "N999",  # invalid module name
]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
